Fix cumulative shift because of different width of title on loading
Reorder functions in the js
Load js async

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ html {
 .month__title--loading {
   position: relative;
 
-  width: 270px;
+  width: 844px;
   height: 48px;
 }
 
@@ -41,10 +41,10 @@ html {
   position: absolute;
   left: 0;
 
-  width: 270px;
-  height: 48px;
+  width: 100%;
+  height: 100%;
 
-  background-color: #f0f0f0;
+  background-color: white;
 }
 
 
@@ -116,7 +116,7 @@ html {
   width: 30px;
   height: 30px;
 
-  background-color: #f0f0f0;
+  background-color: white;
 }
 
 .calendar__month-navigation {
